--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.26.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
